# peertalk-rs

./: Cargo.toml  README.md  test.plist
.github/workflows/: build.yml  ci.yml  prs.yml  test.yml
examples/: connect.rs  listen.rs
src/: lib.rs  protocol.rs
test_data/: command.plist  detached.plist  paired.plist  success-result.plist
