[package]
name = "peertalk"
version = "0.1.0"
authors = ["Jeremy Knope <jeremy@astro-hq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plist = "0.5.3"
serde = { version = "1.0.104", features = ["derive"] }
byteorder = "1.3.4"
