[package]
name = "peertalk"
version = "0.1.0"
authors = ["Jeremy Knope <jeremy@astropad.com>"]
description = "Library for communicating with an iPad or iPhone over USB"
keywords = ["ios", "iphone", "ipad", "peertalk", "usb"]
categories = ["network-programming"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/AstroHQ/peertalk-rs"

[dependencies]
plist = "1"
serde = { version = "1.0", features = ["derive"] }
byteorder = "1.3"
log = "0.4"

[dev-dependencies]
pretty_env_logger = "0.4"
